# Espruino4Pico

./: todo.txt
Espruino/: CMakeLists.txt  README.md  RPI2040gen.sh  jswrapper.c  main.c
Espruino/boards/: RPI2040.py
Espruino/hello_espruino/: CMakeLists.txt  hello_espruino.c
Espruino/libs/graphics/: bitmap_font_4x6.d  bitmap_font_6x8.d  graphics.d  jswrap_graphics.d  lcd_arraybuffer.d  lcd_js.d  vector_font.d
Espruino/scripts/: build_platform_config.py
Espruino/src/: jsdevices.c  jsinteractive.c  jsonewire_common.c  jsvar.c  jswrap_onewire.c  jswrap_onewire.h
Espruino/targets/: CMakeLists.txt
Espruino/targets/RPI2040/: CMakeLists.txt  jshardware.c  jshardwareAnalog.c  jshardwareAnalog.h  jshardwareConsole.c  jshardwareConsole.h  jshardwareFlash.c  jshardwareFlash.h  jshardwareI2C.c  jshardwareI2C.h  jshardwareOneWire.c  jshardwarePWM.c  jshardwarePWM.h  jshardwarePin.c  jshardwarePin.h  jshardwarePulse.c  jshardwarePulse.h  jshardwareSPI.c  jshardwareSPI.h  jshardwareTimer.c  jshardwareTimer.h  jshardwareTools.c  jshardwareTools.h  jshardwareUart.c  jshardwareUart.h
